--- a/.github/workflows/rsi_bot.yml
+++ b/.github/workflows/rsi_bot.yml
@@ -2,9 +2,9 @@ name: Daily RSI Alert Bot
 
 on:
   schedule:
-    # รันเวลา 21:30 UTC ซึ่งตรงกับ 04:30 น. เวลาไทย (จันทร์-ศุกร์) [cite: 2026-02-04]
+    # รันเวลา 21:30 UTC (04:30 น. เวลาไทย) วันจันทร์-ศุกร์
     - cron: '30 21 * * 1-5'
-  workflow_dispatch: # ปุ่มสำหรับกดรันเองเพื่อ Test
+  workflow_dispatch: # ปุ่มกดรันเองสำหรับ Test
 
 jobs:
   build:
@@ -19,7 +19,10 @@ jobs:
           python-version: '3.10'
 
       - name: Install Libraries
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install yfinance pandas requests
+          pip install pandas-ta
 
       - name: Execute Sentinel
         env:
