--- a/.github/workflows/rsi_bot.yml
+++ b/.github/workflows/rsi_bot.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install yfinance pandas requests
-          pip install pandas-ta
+          pip install git+https://github.com/twopirllc/pandas-ta.git@master
 
       - name: Execute Sentinel
         env:
