--- a/.github/workflows/rsi_bot.yml
+++ b/.github/workflows/rsi_bot.yml
@@ -2,9 +2,8 @@ name: Daily RSI Alert Bot
 
 on:
   schedule:
-    # รันเวลา 21:30 UTC (04:30 น. เวลาไทย) วันจันทร์-ศุกร์
-    - cron: '30 21 * * 1-5'
-  workflow_dispatch: # ปุ่มกดรันเองสำหรับ Test
+    - cron: '30 21 * * 1-5' # 04:30 น. เวลาไทย จันทร์-ศุกร์
+  workflow_dispatch:
 
 jobs:
   build:
@@ -22,7 +21,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install yfinance pandas requests
-          pip install git+https://github.com/twopirllc/pandas-ta.git@master
 
       - name: Execute Sentinel
         env:
