Update RSI Bot schedule and enhance stock data retrieval logic; remove requirements.txt

--- a/.github/workflows/rsi_bot.yml
+++ b/.github/workflows/rsi_bot.yml
@@ -2,7 +2,8 @@ name: Daily RSI Alert Bot
 
 on:
   schedule:
-    - cron: '30 21 * * 1-5' # 04:30 น. เวลาไทย จันทร์-ศุกร์
+    # 01:00 UTC = 08:00 น. เวลาไทย (จันทร์-ศุกร์)
+    - cron: '0 1 * * 1-5'
   workflow_dispatch:
 
 jobs:
