Change cron schedule for RSI alert workflow
Updated cron schedule for Daily RSI Alert Bot.

--- a/.github/workflows/rsi_bot.yml
+++ b/.github/workflows/rsi_bot.yml
@@ -2,8 +2,9 @@ name: Daily RSI Alert Bot
 
 on:
   schedule:
-    # 01:00 UTC = 08:00 น. เวลาไทย (จันทร์-ศุกร์)
-    - cron: '0 1 * * 1-5'
+    # 22:15 UTC = 05:15 น. เวลาไทย (เผื่อ Relay จากตี 4 ที่ตลาดปิด)
+    # รันวันอาทิตย์-พฤหัสบดี (UTC) เพื่อให้ตรงกับจันทร์-ศุกร์ (ไทย)
+    - cron: '15 22 * * 0-4'
   workflow_dispatch:
 
 jobs:
