--- a/.github/workflows/rsi_bot.yml
+++ b/.github/workflows/rsi_bot.yml
@@ -28,4 +28,5 @@ jobs:
         env:
           LINE_ACCESS_TOKEN: ${{ secrets.LINE_ACCESS_TOKEN }}
           LINE_USER_ID: ${{ secrets.LINE_USER_ID }}
+          PUSHBULLET_TOKEN: ${{ secrets.PUSHBULLET_TOKEN }}
         run: python main.py
